import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'dev.architectury.loom' version '1.11.458' apply false
    id 'architectury-plugin' version '3.4.162'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'com.github.johnrengelman.shadow' // Shadow 插件

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.


    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()
        implementation 'it.unimi.dsi:fastutil:8.5.18'
        implementation 'org.jsoup:jsoup:1.17.2'
        implementation 'org.apache.commons:commons-rng-sampling:1.5'
        implementation 'org.apache.commons:commons-rng-simple:1.5'
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
    tasks.named('shadowJar', ShadowJar) {
        archiveClassifier.set('') // 覆盖默认 jar
        from sourceSets.main.output
        configurations = [project.configurations.implementation]

        // relocate trove 避免冲突
//        relocate 'gnu.trove', 'opentc4.libs.gnu.trove'//yeah i used AI for this part without checking sorry
        relocate 'it.unimi.dsi.fastutil', 'opentc4.libs.it.unimi.dsi.fastutil'
        relocate 'org.jsoup', 'opentc4.libs.org.jsoup'//for research page parsing
        relocate 'org.apache.commons.rng', 'opentc4.libs.org.apache.commons.rng'
    }

    // 确保 remapJar 使用 shadowJar 的输出
    tasks.named('remapJar') {
        dependsOn tasks.named('shadowJar')
        archiveFile.set(tasks.named('shadowJar').get().archiveFile)
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}